<resources>
    <string name="app_name">Paises</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_fallo_login">Error ingresando usuario</string>
    <string name="msg_fallo_registro">Error registrando usuario</string>
    <string name="title_activity_central">Central</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_estado">Estado</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_nombre">Nombre del Pais</string>
    <string name="msg_capital">Capital</string>
    <string name="msg_poblacion">Cantidad poblacional</string>
    <string name="msg_PIB">Producto Interno Bruto</string>
    <string name="bt_agregar">Agregar Estado</string>
    <string name="bt_actualizar">Actualizar Estado</string>
    <string name="msg_agregar">Agregar Estado</string>
    <string name="estadoAdded">Estado Agregado</string>
    <string name="estadoUpdated">Estado Actualizado</string>
    <string name="delete">Elimina Lugar</string>
    <string name="lugarAdded">Lugar Agregado</string>
    <string name="noData">Faltan datos</string>
    <string name="seguroBorrar">¿Está seguro de eliminar?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>

</resources>